syntax="proto3";

package employee;

option go_package = "employeepb";

message EmployeeRequest{
    uint32 employee_id = 1;
}

message EmployeeResponse{
    string full_name = 1;
}

service EmployeeService{
    rpc GetEmployee(EmployeeRequest) returns (EmployeeResponse) {}
}